--- a/Seth's EDA whiteboard.ipynb
+++ b/Seth's EDA whiteboard.ipynb
@@ -22,7 +22,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "print(\"I imported a thing.\")"
+   ]
   }
  ],
  "metadata": {
