Updates to whiteboard

--- a/Seth's EDA whiteboard.ipynb
+++ b/Seth's EDA whiteboard.ipynb
@@ -26,6 +26,30 @@
     "import pandas as pd\n",
     "print(\"I imported a thing.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is very important code. Nothing will work without it.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"This is very important code. Nothing will work without it.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
